[package]
name = "transit-kindle-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.29.1", features = ["full"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
chrono = { version = "0.4.26", features = ["serde"] }

skia-safe = "0.70"
